# MTSI-BERT

./: .gitignore  print_statistics.py  pyproject.toml  requirements.txt  test.py  train.py
model/: MTSIBert.py  MTSIBertConfig.py
spaCy/: MTSIBertConfig.py  ner_kvret.py  ner_test.py  ner_train.py
