[project]
name = "mtsi-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blis>=1.3.0",
    "boto3>=1.40.11",
    "botocore>=1.40.11",
    "catalogue>=2.0.10",
    "certifi>=2025.8.3",
    "chardet>=5.2.0",
    "click>=8.2.1",
    "cycler>=0.12.1",
    "cymem>=2.0.11",
    "docutils>=0.22",
    "filelock>=3.19.1",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "jmespath>=1.0.1",
    "joblib>=1.5.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.5",
    "murmurhash>=1.0.13",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plac>=1.4.5",
    "preshed>=3.0.10",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "regex>=2025.7.33",
    "requests>=2.32.4",
    "s3transfer>=0.13.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sentencepiece>=0.2.1",
    "six>=1.17.0",
    "spacy>=3.8.7",
    "srsly>=2.5.1",
    "thinc>=8.3.6",
    "tokenizers>=0.21.4",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "urllib3>=2.5.0",
    "wasabi>=1.1.3",
    "zipp>=3.23.0",
]
